--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.html
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="B787_10_MFD.css" />
+﻿<link rel="stylesheet" href="B787_10_MFD.css"/>
 
 <script type="text/html" id="B787_10_MFD">
     <glasscockpit-highlight id="highlight"></glasscockpit-highlight>
@@ -21,10 +21,13 @@
 
 <script type="text/html" import-template="/Pages/VCockpit/Instruments/Shared/Map/MapInstrument.html"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/Highlight.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/Templates/Highlight/Highlight.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/NavSystem.js"></script>
 
@@ -36,14 +39,22 @@
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/Boeing/Boeing_Common.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CommonMFD.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CommonMFD.js"></script>
 
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CDU.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CHKL.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_COM.html"></script>
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_INFO.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CDU.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_ND.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_CHKL.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_COM.html"></script>
+<script type="text/html"
+        import-template="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_INFO.html"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_MFD.js"></script>
