--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.html
@@ -1,16 +1,16 @@
-﻿<link rel="stylesheet" href="./B787_10_EICAS.css" />
+﻿<link rel="stylesheet" href="./B787_10_EICAS.css"/>
 
 <script type="text/html" id="B787_10_EICAS_Template">
     <svg viewBox="0 0 1000 1500">
         <g id="GaugeTemplate" class="gauge" transform="translate(0, 0)">
-            <path class="mainArc" d="M41 12 A96 96 0 1 0 220 60" />
-            <path class="fill" d="M41 12 A96 96 0 0 0 220 60 L124 60" />
-            <rect x="125px" y="3px" width="120px" height="50px" />
+            <path class="mainArc" d="M41 12 A96 96 0 1 0 220 60"/>
+            <path class="fill" d="M41 12 A96 96 0 0 0 220 60 L124 60"/>
+            <rect x="125px" y="3px" width="120px" height="50px"/>
             <text class="valueText" x="240px" y="44px">0.0</text>
-            <line class="normalMarker" x1="0px" x2="96px" transform="translate(124, 60)" />
-            <line class="dangerMarker" x1="96px" x2="112px" transform="translate(124, 60)" />
-            <line class="warningMarker" x1="70px" x2="96px" transform="translate(124, 60)" />
-            <polyline class="greenMarker" points="120,10 100,0 120,-10" transform="translate(124, 60)" />
+            <line class="normalMarker" x1="0px" x2="96px" transform="translate(124, 60)"/>
+            <line class="dangerMarker" x1="96px" x2="112px" transform="translate(124, 60)"/>
+            <line class="warningMarker" x1="70px" x2="96px" transform="translate(124, 60)"/>
+            <polyline class="greenMarker" points="120,10 100,0 120,-10" transform="translate(124, 60)"/>
         </g>
 
         <g id="Mode">
@@ -52,12 +52,12 @@
                 <text class="label" x="275px" y="36px">FF</text>
 
                 <g id="FF_INFO_1" class="gauge">
-                    <rect x="70px" y="0px" width="105px" height="50px" />
+                    <rect x="70px" y="0px" width="105px" height="50px"/>
                     <text id="FF_1_Value" x="170px" y="41px">0.0</text>
                 </g>
 
                 <g id="FF_INFO_2" class="gauge">
-                    <rect x="375px" y="0px" width="105px" height="50px" />
+                    <rect x="375px" y="0px" width="105px" height="50px"/>
                     <text id="FF_2_Value" x="475px" y="41px">0.0</text>
                 </g>
             </g>
@@ -67,15 +67,15 @@
                 <text class="label" x="275px" y="95px">PRESS</text>
 
                 <g id="OIL_P_INFO_1" class="gauge">
-                    <rect x="85px" y="43px" width="90px" height="50px" />
+                    <rect x="85px" y="43px" width="90px" height="50px"/>
                     <text x="170px" y="84px">0</text>
-                    <line x1="190px" x2="190px" y2="136px" />
+                    <line x1="190px" x2="190px" y2="136px"/>
                 </g>
 
                 <g id="OIL_P_INFO_2" class="gauge">
-                    <rect x="375px" y="43px" width="90px" height="50px" />
+                    <rect x="375px" y="43px" width="90px" height="50px"/>
                     <text x="460px" y="84px">0</text>
-                    <line x1="360px" x2="360px" y2="136px" />
+                    <line x1="360px" x2="360px" y2="136px"/>
                 </g>
             </g>
 
@@ -84,15 +84,15 @@
                 <text class="label" x="275px" y="95px">TEMP</text>
 
                 <g id="OIL_T_INFO_1" class="gauge">
-                    <rect x="85px" y="43px" width="90px" height="50px" />
+                    <rect x="85px" y="43px" width="90px" height="50px"/>
                     <text x="170px" y="84px">0</text>
-                    <line x1="190px" x2="190px" y2="136px" />
+                    <line x1="190px" x2="190px" y2="136px"/>
                 </g>
 
                 <g id="OIL_T_INFO_2" class="gauge">
-                    <rect x="375px" y="43px" width="90px" height="50px" />
+                    <rect x="375px" y="43px" width="90px" height="50px"/>
                     <text x="460px" y="84px">0</text>
-                    <line x1="360px" x2="360px" y2="136px" />
+                    <line x1="360px" x2="360px" y2="136px"/>
                 </g>
             </g>
 
@@ -100,12 +100,12 @@
                 <text class="label" x="275px" y="36px">OIL QTY</text>
 
                 <g id="OIL_Q_INFO_1" class="gauge">
-                    <rect x="100px" y="0px" width="75px" height="50px" />
+                    <rect x="100px" y="0px" width="75px" height="50px"/>
                     <text id="OIL_Q_1_Value" x="170px" y="41px">0</text>
                 </g>
 
                 <g id="OIL_Q_INFO_2" class="gauge">
-                    <rect x="375px" y="0px" width="75px" height="50px" />
+                    <rect x="375px" y="0px" width="75px" height="50px"/>
                     <text id="OIL_Q_2_Value" x="445px" y="41px">0</text>
                 </g>
             </g>
@@ -114,15 +114,15 @@
                 <text class="label" x="275px" y="71px">VIB</text>
 
                 <g id="VIB_INFO_1" class="gauge">
-                    <rect x="100px" y="35px" width="75px" height="50px" />
+                    <rect x="100px" y="35px" width="75px" height="50px"/>
                     <text x="170px" y="76px">0.0</text>
-                    <line x1="190px" x2="190px" y2="120px" />
+                    <line x1="190px" x2="190px" y2="120px"/>
                 </g>
 
                 <g id="VIB_INFO_2" class="gauge">
-                    <rect x="375px" y="35px" width="75px" height="50px" />
+                    <rect x="375px" y="35px" width="75px" height="50px"/>
                     <text x="445px" y="76px">0.0</text>
-                    <line x1="360px" x2="360px" y2="120px" />
+                    <line x1="360px" x2="360px" y2="120px"/>
                 </g>
             </g>
         </g>
@@ -163,27 +163,27 @@
             <!--<rect x="500px" width="250px" y="865px" height="195px" style="fill:cyan" />-->
 
             <text class="takeoff" x="580px" y="905px">0.00</text>
-            <rect x="530px" y="915px" width="100px" height="40px" />
+            <rect x="530px" y="915px" width="100px" height="40px"/>
             <text class="value" x="625px" y="948px">0.00</text>
             <text class="info" x="640px" y="880px">ND</text>
             <text class="info" x="640px" y="1010px">NU</text>
-            <rect class="trimBand" x="695px" y="900px" width="16px" height="40px" />
-            <line class="bar" x1="690px" x2="690" y1="870px" y2="1000px" />
-            <path class="markers" d="M690,870 l-16,0 M690,1000 l-16,0" />
-            <path class="arrow" d="M685,936 l-25,-10 l0,20" />
+            <rect class="trimBand" x="695px" y="900px" width="16px" height="40px"/>
+            <line class="bar" x1="690px" x2="690" y1="870px" y2="1000px"/>
+            <path class="markers" d="M690,870 l-16,0 M690,1000 l-16,0"/>
+            <path class="arrow" d="M685,936 l-25,-10 l0,20"/>
             <text class="vlabel" x="725px" y="870px">STAB</text>
         </g>
 
         <g id="Rudder">
             <!--<rect x="750px" width="250px" y="865px" height="195px" style="fill:purple" />-->
 
-            <rect x="845px" y="893px" width="80px" height="40px" />
+            <rect x="845px" y="893px" width="80px" height="40px"/>
             <text class="value" x="920px" y="926px">0.0</text>
             <text class="left" x="820px" y="926px">L</text>
             <text class="right" x="950px" y="926px">R</text>
-            <line class="bar" x1="800px" x2="970" y1="975px" y2="975px" />
-            <path class="markers" d="M800,975 l0,-16 M885,975 l0,-16 M970,975 l0,-16" />
-            <path class="arrow" d="M885,970 l10,-25 l-20,0" />
+            <line class="bar" x1="800px" x2="970" y1="975px" y2="975px"/>
+            <path class="markers" d="M800,975 l0,-16 M885,975 l0,-16 M970,975 l0,-16"/>
+            <path class="arrow" d="M885,970 l10,-25 l-20,0"/>
             <text class="label" x="885px" y="1020px">RUDDER TRIM</text>
         </g>
 
@@ -206,25 +206,25 @@
         </g>
 
         <g id="Fuel">
-            <rect class="background" x="500px" width="500px" y="1255px" height="245px" />
+            <rect class="background" x="500px" width="500px" y="1255px" height="245px"/>
 
-            <rect class="border" x="580px" width="340px" y="1275px" height="60px" rx="10px" ry="10px" />
-            <rect class="box" x="685px" width="130px" y="1260px" height="30px" rx="5px" ry="5px" />
+            <rect class="border" x="580px" width="340px" y="1275px" height="60px" rx="10px" ry="10px"/>
+            <rect class="box" x="685px" width="130px" y="1260px" height="30px" rx="5px" ry="5px"/>
             <text class="label" x="750px" y="1285px">FUEL QTY</text>
             <text id="LEFTFUEL_Value" class="value" x="670px" y="1320px">0.0</text>
             <text id="CENTERFUEL_Value" class="value" x="785px" y="1320px">0.0</text>
             <text id="RIGHTFUEL_Value" class="value" x="895px" y="1320px">0.0</text>
 
             <text class="label" x="577px" y="1375">GROSS WT</text>
-            <rect class="box" x="530px" width="95px" y="1380px" height="50px" rx="10px" ry="10px" />
+            <rect class="box" x="530px" width="95px" y="1380px" height="50px" rx="10px" ry="10px"/>
             <text id="GROSSWEIGHT_Value" class="value" x="625px" y="1418px">0.0</text>
 
             <text class="label" x="912px" y="1370px">TOTAL FUEL</text>
-            <rect class="box" x="850px" width="125px" y="1375px" height="60px" rx="10px" ry="10px" />
+            <rect class="box" x="850px" width="125px" y="1375px" height="60px" rx="10px" ry="10px"/>
             <text id="TOTALFUEL_Value" class="valueWhite" x="972px" y="1422px">0.0</text>
 
             <text class="label" x="527px" y="1478px">SAT</text>
-            <rect class="box" x="555px" width="95px" y="1440px" height="50px" rx="10px" ry="10px" />
+            <rect class="box" x="555px" width="95px" y="1440px" height="50px" rx="10px" ry="10px"/>
             <text id="SAT_Value" class="value" x="640px" y="1480px">0c</text>
 
             <text id="UNITS_Value" class="units" x="750px" y="1390px">KGS X</text>
@@ -232,11 +232,12 @@
 
             <text class="label" x="860px" y="1463px">FUEL</text>
             <text class="label" x="860px" y="1492px">TEMP</text>
-            <rect class="box" x="900px" width="95px" y="1440px" height="50px" rx="10px" ry="10px" />
+            <rect class="box" x="900px" width="95px" y="1440px" height="50px" rx="10px" ry="10px"/>
             <text id="FUELTEMP_Value" class="value" x="985px" y="1480px">-</text>
         </g>
     </svg>
     <div id="Borders"></div>
 </script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.js"></script>
