--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.html
@@ -1,20 +1,20 @@
-﻿<link rel="stylesheet" href="./B787_10_SYS.css" />
+﻿<link rel="stylesheet" href="./B787_10_SYS.css"/>
 
 <script type="text/html" id="B787_10_SYS_Template">
     <svg viewBox="0 0 1200 1800">
         <g id="PageButtonSmallTemplate">
-            <path class="topLeftBorder" d="M0 0 L200 0 l-10 10 L10 95 l-10 10" />
-            <path class="bottomRightBorder" d="M200 105 L200 0 l-10 10 L10 95 l-10 10" />
-            <rect class="border" x="0px" width="200px" y="0px" height="105px" />
-            <rect class="inner" x="10px" width="180px" y="10px" height="85px" />
+            <path class="topLeftBorder" d="M0 0 L200 0 l-10 10 L10 95 l-10 10"/>
+            <path class="bottomRightBorder" d="M200 105 L200 0 l-10 10 L10 95 l-10 10"/>
+            <rect class="border" x="0px" width="200px" y="0px" height="105px"/>
+            <rect class="inner" x="10px" width="180px" y="10px" height="85px"/>
             <text x="100px" y="64px"></text>
         </g>
 
         <g id="PageButtonLargeTemplate">
-            <path class="topLeftBorder" d="M0 0 L240 0 l-10 10 L10 95 l-10 10" />
-            <path class="bottomRightBorder" d="M240 105 L240 0 l-10 10 L10 95 l-10 10" />
-            <rect class="border" x="0px" width="240px" y="0px" height="105px" />
-            <rect class="inner" x="10px" width="220px" y="10px" height="85px" />
+            <path class="topLeftBorder" d="M0 0 L240 0 l-10 10 L10 95 l-10 10"/>
+            <path class="bottomRightBorder" d="M240 105 L240 0 l-10 10 L10 95 l-10 10"/>
+            <rect class="border" x="0px" width="240px" y="0px" height="105px"/>
+            <rect class="inner" x="10px" width="220px" y="10px" height="85px"/>
             <text x="120px" y="64px"></text>
         </g>
 
@@ -48,7 +48,7 @@
 
             <g id="FUEL_Page">
                 <g id="TotalFuelDisplay">
-                    <rect x="450px" y="145px" width="300px" height="80px" rx="25px" ry="25px" />
+                    <rect x="450px" y="145px" width="300px" height="80px" rx="25px" ry="25px"/>
                     <text class="label" x="465px" y="180px">TOTAL</text>
                     <text class="label" x="465px" y="212px">FUEL</text>
                     <text id="TotalFuelValue" class="quantity" x="735px" y="200px">0.0</text>
@@ -63,64 +63,65 @@
                 </g>
 
                 <g id="Engine1" class="engineInfo" transform="translate(340, 115)">
-                    <rect x="-50px" y="-68px" width="100px" height="50px" rx="15px" ry="30px" />
-                    <path d="M20,70 l-40,0 l-7,-20 l54,0 z" />
-                    <path d="M-50,-43 l100,0 c3,42 -3,93 -5,93 l-90,0 M-50,-43 c-3,42 3,93 5,93" />
-                    <line x1="0px" y1="-40px" x2="0px" y2="50px" />
-                    <circle id="Engine1FuelState" r="28" />
+                    <rect x="-50px" y="-68px" width="100px" height="50px" rx="15px" ry="30px"/>
+                    <path d="M20,70 l-40,0 l-7,-20 l54,0 z"/>
+                    <path d="M-50,-43 l100,0 c3,42 -3,93 -5,93 l-90,0 M-50,-43 c-3,42 3,93 5,93"/>
+                    <line x1="0px" y1="-40px" x2="0px" y2="50px"/>
+                    <circle id="Engine1FuelState" r="28"/>
                 </g>
 
                 <g id="Engine2" class="engineInfo" transform="translate(860, 115)">
-                    <rect x="-50px" y="-68px" width="100px" height="50px" rx="15px" ry="30px" />
-                    <path d="M20,70 l-40,0 l-7,-20 l54,0 z" />
-                    <path d="M-50,-43 l100,0 c3,42 -3,93 -5,93 l-90,0 M-50,-43 c-3,42 3,93 5,93" />
-                    <line x1="0px" y1="-40px" x2="0px" y2="50px" />
-                    <circle id="Engine2FuelState" r="28" />
+                    <rect x="-50px" y="-68px" width="100px" height="50px" rx="15px" ry="30px"/>
+                    <path d="M20,70 l-40,0 l-7,-20 l54,0 z"/>
+                    <path d="M-50,-43 l100,0 c3,42 -3,93 -5,93 l-90,0 M-50,-43 c-3,42 3,93 5,93"/>
+                    <line x1="0px" y1="-40px" x2="0px" y2="50px"/>
+                    <circle id="Engine2FuelState" r="28"/>
                 </g>
 
                 <g id="Tank1Info" class="tankInfo">
                     <text class="label" x="600px" y="640px">CENTER</text>
-                    <rect class="background" x="410px" y="665px" width="380px" height="235px" rx="25px" ry="25px" />
+                    <rect class="background" x="410px" y="665px" width="380px" height="235px" rx="25px" ry="25px"/>
                     <text class="label" x="528px" y="705px">L</text>
                     <text class="label" x="673px" y="705px">R</text>
-                    <rect class="quantity" x="518px" y="815px" width="164px" height="68px" rx="25px" ry="25px" />
+                    <rect class="quantity" x="518px" y="815px" width="164px" height="68px" rx="25px" ry="25px"/>
                     <text id="Tank1Quantity" class="quantity" x="664px" y="863px">0.0</text>
                 </g>
 
                 <g id="Tank2Info" class="tankInfo">
                     <text class="label" x="140px" y="330px">L MAIN</text>
-                    <rect class="background" x="30px" y="350px" width="325px" height="305px" rx="25px" ry="25px" />
+                    <rect class="background" x="30px" y="350px" width="325px" height="305px" rx="25px" ry="25px"/>
                     <text class="label" x="98px" y="390px">FWD</text>
                     <text class="label" x="98px" y="640px">AFT</text>
-                    <rect class="quantity" x="160px" y="468px" width="125px" height="68px" rx="25px" ry="25px" />
+                    <rect class="quantity" x="160px" y="468px" width="125px" height="68px" rx="25px" ry="25px"/>
                     <text id="Tank2Quantity" class="quantity" x="268px" y="516px">0.0</text>
                 </g>
 
                 <g id="Tank3Info" class="tankInfo">
                     <text class="label" x="1060px" y="330px">R MAIN</text>
-                    <rect class="background" x="845px" y="350px" width="325px" height="305px" rx="25px" ry="25px" />
+                    <rect class="background" x="845px" y="350px" width="325px" height="305px" rx="25px" ry="25px"/>
                     <text class="label" x="1112px" y="390px">FWD</text>
                     <text class="label" x="1112px" y="640px">AFT</text>
-                    <rect class="quantity" x="915px" y="468px" width="125px" height="68px" rx="25px" ry="25px" />
+                    <rect class="quantity" x="915px" y="468px" width="125px" height="68px" rx="25px" ry="25px"/>
                     <text id="Tank3Quantity" class="quantity" x="1023px" y="516px">0.0</text>
                 </g>
 
                 <text class="label" x="600px" y="430px">CROSSFEED</text>
-                <path class="fuelFrame" d="M340,150 L340,755 L480,755 M145,440 L340,440 M145,565 L340,565 M860,150 L860,755 L720,755 M860,440 L1055,440 M860,565 L1055,565 M340,480 L860,480" />
+                <path class="fuelFrame"
+                      d="M340,150 L340,755 L480,755 M145,440 L340,440 M145,565 L340,565 M860,150 L860,755 L720,755 M860,440 L1055,440 M860,565 L1055,565 M340,480 L860,480"/>
 
                 <g id="FuelPumps">
-                    <rect id="FuelPump1" x="480px" y="720px" width="95px" height="70px" />
-                    <rect id="FuelPump2" x="625px" y="720px" width="95px" height="70px" />
-                    <rect id="FuelPump3" x="50px" y="530px" width="95px" height="70px" />
-                    <rect id="FuelPump4" x="50px" y="405px" width="95px" height="70px" />
-                    <rect id="FuelPump5" x="1055px" y="530px" width="95px" height="70px" />
-                    <rect id="FuelPump6" x="1055px" y="405px" width="95px" height="70px" />
+                    <rect id="FuelPump1" x="480px" y="720px" width="95px" height="70px"/>
+                    <rect id="FuelPump2" x="625px" y="720px" width="95px" height="70px"/>
+                    <rect id="FuelPump3" x="50px" y="530px" width="95px" height="70px"/>
+                    <rect id="FuelPump4" x="50px" y="405px" width="95px" height="70px"/>
+                    <rect id="FuelPump5" x="1055px" y="530px" width="95px" height="70px"/>
+                    <rect id="FuelPump6" x="1055px" y="405px" width="95px" height="70px"/>
                 </g>
 
                 <g id="FuelValveTemplate">
-                    <circle r="28" />
-                    <line x1="-5" x2="-5" y1="-26" y2="26" />
-                    <line x1="5" x2="5" y1="-26" y2="26" />
+                    <circle r="28"/>
+                    <line x1="-5" x2="-5" y1="-26" y2="26"/>
+                    <line x1="5" x2="5" y1="-26" y2="26"/>
                 </g>
 
                 <g id="FuelValves">
@@ -136,44 +137,44 @@
                 </g>
 
                 <g id="FuelLines">
-                    <line id="FuelLine1" x1="476px" x2="579px" y1="755px" y2="755px" />
-                    <polyline id="FuelLine2" points="340,565 340,755 480,755" />
-                    <line id="FuelLine3" x1="46px" x2="145px" y1="565px" y2="565px" />
-                    <line id="FuelLine4" x1="145px" x2="340px" y1="565px" y2="565px" />
-                    <line id="FuelLine5" x1="340px" x2="340px" y1="480px" y2="573px" />
-                    <line id="FuelLine6" x1="340px" x2="340px" y1="440px" y2="480px" />
-                    <line id="FuelLine7" x1="46px" x2="145px" y1="440px" y2="440px" />
-                    <line id="FuelLine8" x1="145px" x2="348px" y1="440px" y2="440px" />
-                    <line id="FuelLine9" x1="340px" x2="340px" y1="305px" y2="448px" />
-                    <line id="FuelLine10" x1="340px" x2="340px" y1="260px" y2="305px" />
-                    <line id="FuelLine11" x1="340px" x2="340px" y1="74px" y2="260px" />
-                    <line id="FuelLine12" x1="621px" x2="724px" y1="755px" y2="755px" />
-                    <polyline id="FuelLine13" points="860,565 860,755 720,755" />
-                    <line id="FuelLine14" x1="1055px" x2="1154px" y1="565px" y2="565px" />
-                    <line id="FuelLine15" x1="860px" x2="1055px" y1="565px" y2="565px" />
-                    <line id="FuelLine16" x1="860px" x2="860px" y1="480px" y2="573px" />
-                    <line id="FuelLine17" x1="860px" x2="860px" y1="440px" y2="480px" />
-                    <line id="FuelLine18" x1="1055px" x2="1154px" y1="440px" y2="440px" />
-                    <line id="FuelLine19" x1="852px" x2="1055px" y1="440px" y2="440px" />
-                    <line id="FuelLine20" x1="860px" x2="860px" y1="260px" y2="448px" />
-                    <line id="FuelLine21" x1="860px" x2="860px" y1="74px" y2="260px" />
+                    <line id="FuelLine1" x1="476px" x2="579px" y1="755px" y2="755px"/>
+                    <polyline id="FuelLine2" points="340,565 340,755 480,755"/>
+                    <line id="FuelLine3" x1="46px" x2="145px" y1="565px" y2="565px"/>
+                    <line id="FuelLine4" x1="145px" x2="340px" y1="565px" y2="565px"/>
+                    <line id="FuelLine5" x1="340px" x2="340px" y1="480px" y2="573px"/>
+                    <line id="FuelLine6" x1="340px" x2="340px" y1="440px" y2="480px"/>
+                    <line id="FuelLine7" x1="46px" x2="145px" y1="440px" y2="440px"/>
+                    <line id="FuelLine8" x1="145px" x2="348px" y1="440px" y2="440px"/>
+                    <line id="FuelLine9" x1="340px" x2="340px" y1="305px" y2="448px"/>
+                    <line id="FuelLine10" x1="340px" x2="340px" y1="260px" y2="305px"/>
+                    <line id="FuelLine11" x1="340px" x2="340px" y1="74px" y2="260px"/>
+                    <line id="FuelLine12" x1="621px" x2="724px" y1="755px" y2="755px"/>
+                    <polyline id="FuelLine13" points="860,565 860,755 720,755"/>
+                    <line id="FuelLine14" x1="1055px" x2="1154px" y1="565px" y2="565px"/>
+                    <line id="FuelLine15" x1="860px" x2="1055px" y1="565px" y2="565px"/>
+                    <line id="FuelLine16" x1="860px" x2="860px" y1="480px" y2="573px"/>
+                    <line id="FuelLine17" x1="860px" x2="860px" y1="440px" y2="480px"/>
+                    <line id="FuelLine18" x1="1055px" x2="1154px" y1="440px" y2="440px"/>
+                    <line id="FuelLine19" x1="852px" x2="1055px" y1="440px" y2="440px"/>
+                    <line id="FuelLine20" x1="860px" x2="860px" y1="260px" y2="448px"/>
+                    <line id="FuelLine21" x1="860px" x2="860px" y1="74px" y2="260px"/>
                     <g id="FuelLine22">
-                        <polyline points="348,280 145,280 145,180" />
-                        <rect x="100px" y="130px" width="90px" height="50px" rx="25px" ry="25px" />
+                        <polyline points="348,280 145,280 145,180"/>
+                        <rect x="100px" y="130px" width="90px" height="50px" rx="25px" ry="25px"/>
                         <text class="label" x="145px" y="165px">APU</text>
                     </g>
-                    <line id="FuelLine23" x1="332px" x2="625px" y1="480px" y2="480px" />
-                    <line id="FuelLine24" x1="575px" x2="868px" y1="480px" y2="480px" />
-                    <line id="FuelLine32" x1="340px" x2="340px" y1="557px" y2="880px" />
-                    <line id="FuelLine33" x1="860px" x2="860px" y1="557px" y2="880px" />
+                    <line id="FuelLine23" x1="332px" x2="625px" y1="480px" y2="480px"/>
+                    <line id="FuelLine24" x1="575px" x2="868px" y1="480px" y2="480px"/>
+                    <line id="FuelLine32" x1="340px" x2="340px" y1="557px" y2="880px"/>
+                    <line id="FuelLine33" x1="860px" x2="860px" y1="557px" y2="880px"/>
                     <g id="FuelLine34">
-                        <polyline points="860,878 860,1160, 192,1160 192,700" />
-                        <path d="M192,700 l-15,0 l15,-30 l15,30 z" />
+                        <polyline points="860,878 860,1160, 192,1160 192,700"/>
+                        <path d="M192,700 l-15,0 l15,-30 l15,30 z"/>
                         <text class="label" x="600px" y="1200px">BALANCE</text>
                     </g>
                     <g id="FuelLine35">
-                        <polyline points="340,878 340,1160, 1008,1160 1008,700" />
-                        <path d="M1008,700 l-15,0 l15,-30 l15,30 z" />
+                        <polyline points="340,878 340,1160, 1008,1160 1008,700"/>
+                        <path d="M1008,700 l-15,0 l15,-30 l15,30 z"/>
                         <text class="label" x="600px" y="1200px">BALANCE</text>
                     </g>
                 </g>
@@ -211,4 +212,5 @@
     <div id="Borders"></div>
 </script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.js"></script>
+<script type="text/html"
+        import-script="/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_SYS.js"></script>
