--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.html
@@ -175,6 +175,14 @@
 <script type="text/html" import-script="/WTPages/WTLibs/WT_GCMath.js"></script>
 <script type="text/html" import-script="/WTPages/WTLibs/LzUtf8.js"></script>
 <script type="text/html" import-script="/WTPages/WTLibs/wtsdk.js"></script>
+
+<script type="text/html" import-script="/WTPages/Autopilot/CJ4NavModeSelector.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/AutopilotMath.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/HoldsDirector.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/LocDirector.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/LNavDirector.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/WT_BaseVnav.js"></script>
+<script type="text/html" import-script="/WTPages/Autopilot/WT_VnavAutopilot.js"></script>
 <!-- WT files END -->
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
@@ -197,7 +205,8 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/Shared/FMC/FMCDataManager.js"></script>
 
 <!-- Heavy files -->
-<script type="text/html" import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
+<script type="text/html"
+        import-script="/HPages/VCockpit/Instruments/Airliners/Shared/Boeing/Heavy_Boeing_FMC.js"></script>
 <!-- Heavy files END -->
 
 <script type="text/html"
